--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,6 +1,6 @@
 --index-url https://pypi.python.org/simple/
 
-sphinx
+sphinx==1.1.3
 sphinxcontrib-napoleon
 sphinx_rtd_theme
 -e hg+http://code.google.com/p/pyglet#egg=pyglet
