--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -3,5 +3,4 @@ current_version = 0.1.1
 files = src/pyglet2d.py
 commit = True
 tag = True
-message = "Bump version: {current_version} → {new_version} [ci skip]"
-
+message = Bump version: {current_version} → {new_version} [ci skip]
