--- a/tox.ini
+++ b/tox.ini
@@ -10,7 +10,7 @@ envlist =
 [testenv]
 deps =
     pytest
-    -r{toxinidir}/docs/requirements.txt
+    -r{toxinidir}/requirements.txt
 commands =
     py.test
 
