--- a/setup.cfg
+++ b/setup.cfg
@@ -22,7 +22,7 @@ addopts =
     --strict
     --ignore docs/conf.py
     --ignore setup.py
-    --ignore tests/graphics_test.py
+    --ignore tests/graphics_demo.py
     --doctest-modules
     --doctest-glob \*.rst
     --tb short
